keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.7
          args: ["start", "--cache-stack=kubernetes"]
          volumeMounts:
          - name: certs
            mountPath: "/etc/certs"
            readOnly: true
          - name: kcb-infinispan-cache-config
            mountPath: /opt/keycloak/conf/kcb-infinispan-cache-remote-store-config.xml
            subPath: kcb-infinispan-cache-remote-store-config.xml
            readOnly: true
          ports:
            - name: jgroups
              containerPort: 7600
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/ready
              port: 8443
            initialDelaySeconds: 60
            periodSeconds: 1
      volumes:
      - name: certs
        secret:
          secretName: kc-tls-secret
      - name: kcb-infinispan-cache-config
        configMap:
          name: kcb-infinispan-cache-config
          items:
            - key: kcb-infinispan-cache-remote-store-config.xml
              path: kcb-infinispan-cache-remote-store-config.xml
